@@ -23,6 +23,7 @@
   to the @listen decorator (Thanks again, Lugoues!)
 * In path formats, $albumartist now falls back to $artist (as well as
   the other way around).
+* Fix some crashes when deleting files that don't exist.
 * Fix adding individual tracks in BPD.
 
 1.0b7
